@@ -297,7 +297,7 @@
     "minTurns": 2,
     "motion": 1,
     "name": "On Fire!",
-    "note": "<Category: debuff>\n<Category: weak debuff>\n<Category: Fire>\n<animationRow: 28>\n\n<DoT Formula: 100>\n<DoT Element: 2>\n<DoT Animation: 67>\n\n<Help Description>\nDeals 50 \\i[96]fire damage per turn. [WEAK DEBUFF]\n</Help Description>",
+    "note": "<Category: debuff>\n<Category: weak debuff>\n<Category: Fire>\n<animationRow:28>\n\n<DoT Formula: 100>\n<DoT Element: 2>\n<DoT Animation: 67>\n\n<Help Description>\nDeals 50 \\i[96]fire damage per turn. [WEAK DEBUFF]\n</Help Description>",
     "overlay": 0,
     "priority": 49,
     "removeAtBattleEnd": true,
@@ -321,7 +321,7 @@
     "motion": 0,
     "overlay": 0,
     "name": "Frozen I",
-    "note": "<Category: debuff>\n<Category: weak debuff>\n<Category: Ice>\n<State Motion: Dying>\n<animationRow: 20>\n<yAnchor: 0.75>\n\n<Sprite Cannot Move>\n\n<Help Description>\nCannot do anything. [WEAK DEBUFF]\n</Help Description>",
+    "note": "<Category: debuff>\n<Category: weak debuff>\n<Category: Ice>\n<State Motion: Dying>\n<animationRow:20>\n<yAnchor: 0.75>\n\n<Sprite Cannot Move>\n\n<Help Description>\nCannot do anything. [WEAK DEBUFF]\n</Help Description>",
     "priority": 81,
     "removeAtBattleEnd": true,
     "removeByDamage": false,
@@ -1224,7 +1224,7 @@
     "minTurns": 5,
     "motion": 0,
     "name": "Soaked",
-    "note": "<Category: debuff>\n<Category: weak debuff>\n<Category: Water>\n<animationRow: 21>\n<yAnchor: 0.75>\n\n<Help Description>\nReduces AGI by 50% and EVA by 20%. [WEAK DEBUFF]\n</Help Description>",
+    "note": "<Category: debuff>\n<Category: weak debuff>\n<Category: Water>\n<animationRow:21>\n<yAnchor: 0.75>\n\n<Help Description>\nReduces AGI by 50% and EVA by 20%. [WEAK DEBUFF]\n</Help Description>",
     "overlay": 0,
     "priority": 48,
     "removeAtBattleEnd": false,
@@ -1248,7 +1248,7 @@
     "minTurns": 3,
     "motion": 0,
     "name": "Bleeding",
-    "note": "<Category: debuff>\n<Category: weak debuff>\n<animationRow: 23>\n<yAnchor: 0.75>\n\n<Custom DoT Formula>\nvalue = Math.ceil(b.hp * 0.2);\n</Custom DoT Formula>\n\n<Help Description>\n20% of current HP is lost at the end of every turn. [WEAK DEBUFF]\n</Help Description>",
+    "note": "<Category: debuff>\n<Category: weak debuff>\n<animationRow:23>\n<yAnchor: 0.75>\n\n<Custom DoT Formula>\nvalue = Math.ceil(b.hp * 0.2);\n</Custom DoT Formula>\n\n<Help Description>\n20% of current HP is lost at the end of every turn. [WEAK DEBUFF]\n</Help Description>",
     "overlay": 0,
     "priority": 48,
     "removeAtBattleEnd": true,
@@ -1296,7 +1296,7 @@
     "minTurns": 1,
     "motion": 1,
     "name": "Stunned",
-    "note": "<Category: debuff>\n<Category: weak debuff>\n<animationRow: 24>\n\n<Help Description>\nCannot do anything. [WEAK DEBUFF]\n</Help Description>",
+    "note": "<Category: debuff>\n<Category: weak debuff>\n<animationRow:24>\n\n<Help Description>\nCannot do anything. [WEAK DEBUFF]\n</Help Description>",
     "overlay": 5,
     "priority": 80,
     "removeAtBattleEnd": true,
@@ -1380,7 +1380,7 @@
     "minTurns": 3,
     "motion": 1,
     "name": "Poisoned",
-    "note": "<Category: debuff>\n<Category: moderate debuff>\n<animationRow: 29>\n\n<HRG Rate: 0%>\n\n<Custom Apply Effect>\nthis._toxicCounter = 1;\n</Custom Apply Effect>\n\n<Custom Regenerate Effect>\nvar n = this._toxicCounter / 16;\nvar value = Math.floor(n * user.mhp * -1);\nuser.gainHp(value);\nthis._toxicCounter += 1;\nthis.startAnimation(59);\n</Custom Regenerate Effect>\n\n<Help Description>\n1/16th of current HP is lost at the end of every turn. For every turn this state has been applied, another 1/16th is lost. Removes all HRG. [MODERATE DEBUFF]\n</Help Description>",
+    "note": "<Category: debuff>\n<Category: moderate debuff>\n<animationRow:29>\n\n<HRG Rate: 0%>\n\n<Custom Apply Effect>\nthis._toxicCounter = 1;\n</Custom Apply Effect>\n\n<Custom Regenerate Effect>\nvar n = this._toxicCounter / 16;\nvar value = Math.floor(n * user.mhp * -1);\nuser.gainHp(value);\nthis._toxicCounter += 1;\nthis.startAnimation(59);\n</Custom Regenerate Effect>\n\n<Help Description>\n1/16th of current HP is lost at the end of every turn. For every turn this state has been applied, another 1/16th is lost. Removes all HRG. [MODERATE DEBUFF]\n</Help Description>",
     "overlay": 1,
     "priority": 68,
     "removeAtBattleEnd": false,
@@ -1690,7 +1690,7 @@
     "minTurns": 1,
     "motion": 0,
     "name": "Soul Shackles",
-    "note": "<Category: debuff>\n<Category: moderate debuff>\n<animationRow: 25>\n\n<Help Description>\nLeeches HP at the end of every turn equal to 1/16th of this unit's MHP, capped at 1/5th of the origin's MHP. [MODERATE DEBUFF]\n</Help Description>\n\n<Custom Regenerate Effect>\n// Check if the original caster isn't the target and that the original target is alive.\nif (origin !== target && origin.isAlive()) {\n  // Determine the damage dealt.\n  var damage = target.mhp / 16;\n  // Round up the damage.\n  damage = Math.ceil(damage);\n  // Cap the damage to 500.\n  cap = Math.ceil(origin.mhp / 5);\n  damage = Math.min(cap, damage);\n  // Play the healing animation on the original caster.\n  origin.startAnimation(46);\n  // Original caster gains HP.\n  origin.gainHp(damage);\n  // Show the HP gained.\n  origin.customPopup(\"+\" + damage, 1);\n  // Clears the original caster's HP popup.\n  origin.clearResult();\n  // Play the poison animation on the target.\n  target.startAnimation(58);\n  // Damage the target's HP.\n  target.gainHp(-damage);\n  // Check if the target is dead.\n  if (target.isDead()) {\n  // If the target is dead, make it collapse.\n    target.performCollapse();\n  }\n}\n</Custom Regenerate Effect>\n\n<Custom Remove Effect>\nthis.startAnimation(244);\n</Custom Remove Effect>",
+    "note": "<Category: debuff>\n<Category: moderate debuff>\n<animationRow:25>\n\n<Help Description>\nLeeches HP at the end of every turn equal to 1/16th of this unit's MHP, capped at 1/5th of the origin's MHP. [MODERATE DEBUFF]\n</Help Description>\n\n<Custom Regenerate Effect>\n// Check if the original caster isn't the target and that the original target is alive.\nif (origin !== target && origin.isAlive()) {\n  // Determine the damage dealt.\n  var damage = target.mhp / 16;\n  // Round up the damage.\n  damage = Math.ceil(damage);\n  // Cap the damage to 500.\n  cap = Math.ceil(origin.mhp / 5);\n  damage = Math.min(cap, damage);\n  // Play the healing animation on the original caster.\n  origin.startAnimation(46);\n  // Original caster gains HP.\n  origin.gainHp(damage);\n  // Show the HP gained.\n  origin.customPopup(\"+\" + damage, 1);\n  // Clears the original caster's HP popup.\n  origin.clearResult();\n  // Play the poison animation on the target.\n  target.startAnimation(58);\n  // Damage the target's HP.\n  target.gainHp(-damage);\n  // Check if the target is dead.\n  if (target.isDead()) {\n  // If the target is dead, make it collapse.\n    target.performCollapse();\n  }\n}\n</Custom Regenerate Effect>\n\n<Custom Remove Effect>\nthis.startAnimation(244);\n</Custom Remove Effect>",
     "overlay": 9,
     "priority": 50,
     "removeAtBattleEnd": true,
@@ -1714,7 +1714,7 @@
     "minTurns": 3,
     "motion": 0,
     "name": "Biding",
-    "note": "<animationRow: 12>\n\n<Help Description>\nCannot do anything. Once the state expires, the afflicted will deal damage to all enemies equal to 2x the damage received while biding.\n</Help Description>\n\n<Custom Apply Effect>\n// Upon applying Bide, set the Bide damage to 0.\nuser._bide = 0;\n</Custom Apply Effect>\n\n<Custom Respond Effect>\n// Check if the target took any HP damage.\nif (target.result().hpDamage > 0) {\n  // If the target did, raise the Bide damage by the HP damage taken.\n  target._bide += target.result().hpDamage;\n}\n</Custom Respond Effect>\n\n<Custom Remove Effect>\n// Check if the party is in battle.\nif ($gameParty.inBattle()) {\n// Play animation 40 on the user.\nuser.startAnimation(40);\n// Calculate the damage. The damage dealt is equal to 2x Bide damage.\nvar damage = Math.ceil(user._bide * 2);\n// Get the group of alive enemies.\nvar enemies = user.opponentsUnit().aliveMembers();\n// Loop through each of the enemies.\nfor (var i = 0; i < enemies.length; ++i) {\n  // Get the enemy.\n  var enemy = enemies[i];\n  // Play animation 107 on the enemy.\n  enemy.startAnimation(107);\n  // Make the enemy take damage.\n  enemy.gainHp(-damage);\n  // Prompt the enemy's damage popup.\n  enemy.startDamagePopup();\n  // Clear the results of the enemy taking damage.\n  enemy.clearResult();\n  // Check if the enemy is dead.\n  if (enemy.isDead()) {\n    // If the enemy is dead, make it collapse.\n    enemy.performCollapse();\n  }\n}\n// Reset the Bide damage value.\nuser._bide = 0;\n\n} // Check if the party is in battle.\n</Custom Remove Effect>",
+    "note": "<animationRow:12>\n\n<Help Description>\nCannot do anything. Once the state expires, the afflicted will deal damage to all enemies equal to 2x the damage received while biding.\n</Help Description>\n\n<Custom Apply Effect>\n// Upon applying Bide, set the Bide damage to 0.\nuser._bide = 0;\n</Custom Apply Effect>\n\n<Custom Respond Effect>\n// Check if the target took any HP damage.\nif (target.result().hpDamage > 0) {\n  // If the target did, raise the Bide damage by the HP damage taken.\n  target._bide += target.result().hpDamage;\n}\n</Custom Respond Effect>\n\n<Custom Remove Effect>\n// Check if the party is in battle.\nif ($gameParty.inBattle()) {\n// Play animation 40 on the user.\nuser.startAnimation(40);\n// Calculate the damage. The damage dealt is equal to 2x Bide damage.\nvar damage = Math.ceil(user._bide * 2);\n// Get the group of alive enemies.\nvar enemies = user.opponentsUnit().aliveMembers();\n// Loop through each of the enemies.\nfor (var i = 0; i < enemies.length; ++i) {\n  // Get the enemy.\n  var enemy = enemies[i];\n  // Play animation 107 on the enemy.\n  enemy.startAnimation(107);\n  // Make the enemy take damage.\n  enemy.gainHp(-damage);\n  // Prompt the enemy's damage popup.\n  enemy.startDamagePopup();\n  // Clear the results of the enemy taking damage.\n  enemy.clearResult();\n  // Check if the enemy is dead.\n  if (enemy.isDead()) {\n    // If the enemy is dead, make it collapse.\n    enemy.performCollapse();\n  }\n}\n// Reset the Bide damage value.\nuser._bide = 0;\n\n} // Check if the party is in battle.\n</Custom Remove Effect>",
     "overlay": 0,
     "priority": 90,
     "removeAtBattleEnd": true,
@@ -1851,7 +1851,7 @@
     "minTurns": 5,
     "motion": 0,
     "name": "Smoke Bomb",
-    "note": "<Category: buff>\n<animationRow: 11>\n<yAnchor: 0.75>\n\n<Help Description>\nReduces AGR by 20%. Cannot be afflicted with \\it[55].\n</Help Description>",
+    "note": "<Category: buff>\n<animationRow:11>\n<yAnchor: 0.75>\n\n<Help Description>\nReduces AGR by 20%. Cannot be afflicted with \\it[55].\n</Help Description>",
     "overlay": 0,
     "priority": 30,
     "removeAtBattleEnd": true,
@@ -1891,7 +1891,7 @@
     "minTurns": 5,
     "motion": 0,
     "name": "Cherry Bomb",
-    "note": "<Category: buff>\n<animationRow: 17>\n<yAnchor: 0.75>\n\n<Help Description>\nBoosts EVA and MEV by 20%. Cannot be afflicted with \\it[54].\n</Help Description>",
+    "note": "<Category: buff>\n<animationRow:17>\n<yAnchor: 0.75>\n\n<Help Description>\nBoosts EVA and MEV by 20%. Cannot be afflicted with \\it[54].\n</Help Description>",
     "overlay": 0,
     "priority": 30,
     "removeAtBattleEnd": true,
@@ -1926,7 +1926,7 @@
     "minTurns": 5,
     "motion": 0,
     "name": "Slimy",
-    "note": "<Category: debuff>\n<Category: weak debuff>\n<animationRow: 21>\n<yAnchor: 0.75>\n\n<Help Description>\nReduces AGI by 30% and EVA by 10%. [WEAK DEBUFF]\n</Help Description>",
+    "note": "<Category: debuff>\n<Category: weak debuff>\n<animationRow:21>\n<yAnchor: 0.75>\n\n<Help Description>\nReduces AGI by 30% and EVA by 10%. [WEAK DEBUFF]\n</Help Description>",
     "overlay": 0,
     "priority": 48,
     "removeAtBattleEnd": false,
@@ -1991,7 +1991,7 @@
     "minTurns": 1,
     "motion": 0,
     "name": "Night Boost",
-    "note": "<Category: Bypass Death Removal>\n<Category: Bypass Recover All Removal>\n<animationRow: 26>\n\n<Help Description>\nBoosts MHP, MMP, ATK, DEF, MAT, MDF, AGI, and HRG by 10%.\n</Help Description>",
+    "note": "<Category: Bypass Death Removal>\n<Category: Bypass Recover All Removal>\n<animationRow:26>\n\n<Help Description>\nBoosts MHP, MMP, ATK, DEF, MAT, MDF, AGI, and HRG by 10%.\n</Help Description>",
     "overlay": 0,
     "priority": 5,
     "removeAtBattleEnd": false,
@@ -2069,7 +2069,7 @@
     "minTurns": 1,
     "motion": 0,
     "name": "Strength Within The Blade",
-    "note": "<animationRow: 27>\n\n<HP Life Steal Physical: +50%>\n\n<Category: Bypass Death Removal>\n<Category: Bypass Recover All Removal>\n\n<Help Description>\nBoosts physical lifesteal by 50%. Overhealed lifesteal is converted to a magical barrier.\n</Help Description>\n\n<Custom Confirm Effect>\n// Registers the HP value of the user.\nuser._confirmHp = user.hp;\n</Custom Confirm Effect>\n\n<Custom Establish Effect>\n// Check to see if the effect deals damage to HP and is a physical attack.\nif (value > 0 && this.isHpEffect() && this.isPhysical()) {\n  // Check to see if the user is at full HP.\n  if (user.hp === user.mhp) {\n    // Get the user's Life Steal results.\n    var result = user.result();\n    // Get the overheal amount.\n    var overheal = -1 * result.hpDamage + user._confirmHp - user.mhp;\n    // Check if the overheal amount is above 0.\n    if (overheal > 0) {\n      // Adds a barrier to the user based on the overheal amount.\n      user.gainBarrier(overheal, 0);\n      user.customPopup(\"+\" + overheal, 3);\n    }\n  }\n}\n</Custom Establish Effect>",
+    "note": "<animationRow:27>\n\n<HP Life Steal Physical: +50%>\n\n<Category: Bypass Death Removal>\n<Category: Bypass Recover All Removal>\n\n<Help Description>\nBoosts physical lifesteal by 50%. Overhealed lifesteal is converted to a magical barrier.\n</Help Description>\n\n<Custom Confirm Effect>\n// Registers the HP value of the user.\nuser._confirmHp = user.hp;\n</Custom Confirm Effect>\n\n<Custom Establish Effect>\n// Check to see if the effect deals damage to HP and is a physical attack.\nif (value > 0 && this.isHpEffect() && this.isPhysical()) {\n  // Check to see if the user is at full HP.\n  if (user.hp === user.mhp) {\n    // Get the user's Life Steal results.\n    var result = user.result();\n    // Get the overheal amount.\n    var overheal = -1 * result.hpDamage + user._confirmHp - user.mhp;\n    // Check if the overheal amount is above 0.\n    if (overheal > 0) {\n      // Adds a barrier to the user based on the overheal amount.\n      user.gainBarrier(overheal, 0);\n      user.customPopup(\"+\" + overheal, 3);\n    }\n  }\n}\n</Custom Establish Effect>",
     "overlay": 4,
     "priority": 70,
     "removeAtBattleEnd": true,
@@ -2265,7 +2265,7 @@
     "minTurns": 1,
     "motion": 0,
     "name": "Mana Refund",
-    "note": "<animationRow: 22>\n\n<Help Description>\nBattlers who attack this unit will gain MP equal to 1% of damage dealt, capped at 5% of MMP.\n</Help Description>\n\n<Custom Respond Effect>\nif (value > 0) {\n  var mp = Math.ceil(value * 0.01);\n  var cap = Math.ceil(user.mmp * 0.05);\n  if (mp > cap) {\n    mp = cap;\n  }\n  user.gainMp(mp);\n  user.startDamagePopup();\n  user.clearResult();\n}\n</Custom Respond Effect>",
+    "note": "<animationRow:22>\n\n<Help Description>\nBattlers who attack this unit will gain MP equal to 1% of damage dealt, capped at 5% of MMP.\n</Help Description>\n\n<Custom Respond Effect>\nif (value > 0) {\n  var mp = Math.ceil(value * 0.01);\n  var cap = Math.ceil(user.mmp * 0.05);\n  if (mp > cap) {\n    mp = cap;\n  }\n  user.gainMp(mp);\n  user.startDamagePopup();\n  user.clearResult();\n}\n</Custom Respond Effect>",
     "overlay": 9,
     "priority": 41,
     "removeAtBattleEnd": true,
@@ -2762,7 +2762,7 @@
     "minTurns": 1,
     "motion": 0,
     "name": "Clear Mind",
-    "note": "<animationRow: 15>\n\n<Help Description>\nWhile downed, this unit regenerates 10% of their MP per turn.\n</Help Description>\n\n<Custom Turn End Effect>\nuser.startAnimation(42);\nvar toGain = Math.round(target.mmp / 10);\ntarget.gainMp(toGain);\ntarget.startDamagePopup();\n</Custom Turn End Effect>",
+    "note": "<animationRow:15>\n\n<Help Description>\nWhile downed, this unit regenerates 10% of their MP per turn.\n</Help Description>\n\n<Custom Turn End Effect>\nuser.startAnimation(42);\nvar toGain = Math.round(target.mmp / 10);\ntarget.gainMp(toGain);\ntarget.startDamagePopup();\n</Custom Turn End Effect>",
     "overlay": 0,
     "priority": 10,
     "removeAtBattleEnd": false,
@@ -2869,7 +2869,7 @@
     "minTurns": 2,
     "motion": 0,
     "name": "Eye of the Storm",
-    "note": "<Category: debuff>\n<Category: moderate debuff>\n<Category: Wind>\n<animationRow: 11>\n\n<Help Description>\nReduces HIT by 15% and CRI by 6%. ATK and MAT are debuffed by one level at the end of every turn. [MODERATE DEBUFF]\n</Help Description>\n\n<Custom Turn End Effect>\nuser.addDebuff(2, 3);\nuser.addDebuff(4, 3);\nuser.startAnimation(54);\n</Custom Turn End Effect>",
+    "note": "<Category: debuff>\n<Category: moderate debuff>\n<Category: Wind>\n<animationRow:11>\n\n<Help Description>\nReduces HIT by 15% and CRI by 6%. ATK and MAT are debuffed by one level at the end of every turn. [MODERATE DEBUFF]\n</Help Description>\n\n<Custom Turn End Effect>\nuser.addDebuff(2, 3);\nuser.addDebuff(4, 3);\nuser.startAnimation(54);\n</Custom Turn End Effect>",
     "overlay": 0,
     "priority": 69,
     "removeAtBattleEnd": true,
@@ -2893,7 +2893,7 @@
     "motion": 0,
     "overlay": 0,
     "name": "Frozen II",
-    "note": "<Category: debuff>\n<Category: moderate debuff>\n<Category: Ice>\n<State Motion: Dying>\n<animationRow: 20>\n<yAnchor: 0.75>\n\n<Sprite Cannot Move>\n\n<Help Description>\nCannot do anything. Reduces DEF and MDF by 25%. [MODERATE DEBUFF]\n</Help Description>",
+    "note": "<Category: debuff>\n<Category: moderate debuff>\n<Category: Ice>\n<State Motion: Dying>\n<animationRow:20>\n<yAnchor: 0.75>\n\n<Sprite Cannot Move>\n\n<Help Description>\nCannot do anything. Reduces DEF and MDF by 25%. [MODERATE DEBUFF]\n</Help Description>",
     "priority": 82,
     "removeAtBattleEnd": true,
     "removeByDamage": false,
@@ -3092,7 +3092,7 @@
     "minTurns": 2,
     "motion": 0,
     "name": "Amnesia",
-    "note": "<Category: debuff>\n<Category: weak debuff>\n<animationRow: 14>\n\n<Help Description>\nThis unit cannot use special skills. [WEAK DEBUFF]\n</Help Description>",
+    "note": "<Category: debuff>\n<Category: weak debuff>\n<animationRow:14>\n\n<Help Description>\nThis unit cannot use special skills. [WEAK DEBUFF]\n</Help Description>",
     "overlay": 3,
     "priority": 48,
     "removeAtBattleEnd": true,
@@ -3374,7 +3374,7 @@
     "minTurns": 3,
     "motion": 1,
     "name": "Burning Up!",
-    "note": "<Category: debuff>\n<Category: moderate debuff>\n<Category: Fire>\n<animationRow: 28>\n\n<DoT Formula: 400>\n<DoT Element: 2>\n<DoT Animation: 67>\n\n<Help Description>\nDeals 200 \\i[96]fire damage per turn. [MODERATE DEBUFF]\n</Help Description>",
+    "note": "<Category: debuff>\n<Category: moderate debuff>\n<Category: Fire>\n<animationRow:28>\n\n<DoT Formula: 400>\n<DoT Element: 2>\n<DoT Animation: 67>\n\n<Help Description>\nDeals 200 \\i[96]fire damage per turn. [MODERATE DEBUFF]\n</Help Description>",
     "overlay": 0,
     "priority": 49,
     "removeAtBattleEnd": true,
